# transparent_cmake_conan_project_template

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
cmake/: CXXProjectConanConfig.cmake.in
include/cxx_project_conan/: my_class.h
src/: CMakeLists.txt  my_class.cpp
test/: CMakeLists.txt  my_class_test.cpp
test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
